experimental/parser/testdata/parser/range/invalid_exprs.proto.stderr.txt
error: unexpected message expression in extension range
  --> testdata/parser/range/invalid_exprs.proto:20:16
   |
20 |     extensions {};
   |                ^^ expected range expression or integer literal

error: unexpected message expression in reserved range
  --> testdata/parser/range/invalid_exprs.proto:21:14
   |
21 |     reserved {};
   |              ^^
   |              |
   |              expected range expression, string literal, or integer literal

error: unexpected string literal in extension range
  --> testdata/parser/range/invalid_exprs.proto:23:16
   |
23 |     extensions "foo", -"bar", "foo" to "bar";
   |                ^^^^^ expected range expression or integer literal

encountered 3 errors
